Add basic Python Processor to trigger an UDP based on the added points