@@ -9,6 +9,8 @@ import org.apache.parquet.io.LocalInputFile;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
@@ -63,7 +65,8 @@ import static org.integratedmodelling.klab.nifi.utils.KlabAttributes.*;
 
 @WritesAttributes({
         @WritesAttribute(attribute = "rdm.points.count", description = "Count of Points submitted to the Digital Twin"),
-        @WritesAttribute(attribute = "rdm.points.convex.hull", description="Convex Hull of the Points Submitted")
+        @WritesAttribute(attribute = "rdm.points.convex.hull", description="Convex Hull of the Points Submitted"),
+        @WritesAttribute(attribute="rdm.points.dt.url", description = "The Digital Twin URL to which the Points have been submitted")
 })
 
 @SeeAlso( {KlabObservationWithDT.class})
@@ -182,8 +185,8 @@ public class KlabWEEDTrainingPointsReader extends AbstractProcessor {
             conf.set("parquet.avro.readInt96AsTimestamp", "true");
             conf.set("parquet.avro.int96.timestamp.timezone", "UTC");
 
-            File file = new File(downloadParquetToTemp(pqDownloadURL).getAbsolutePath());
-            InputFile inputFile = new LocalInputFile(Paths.get(file.getAbsolutePath()));
+            File pqFile = new File(downloadParquetToTemp(pqDownloadURL).getAbsolutePath());
+            InputFile inputFile = new LocalInputFile(Path.of(pqFile.getAbsolutePath()));
             ParquetReader<GenericRecord> reader = AvroParquetReader
                     .<GenericRecord>builder(inputFile)
                     .withConf(conf)
@@ -241,7 +244,11 @@ public class KlabWEEDTrainingPointsReader extends AbstractProcessor {
             Map<String, String> attributes = new HashMap<>();
             attributes.put("rdm.points.count", String.valueOf(pointsArray.size()));
             attributes.put("rdm.points.convex.hull", convexHullWkt(pointsArray));
+            attributes.put("rdm.points.dt.url", dtURL.toString());
+
             session.putAllAttributes(flowfile, attributes);
+            getLogger().info("Deleting the Temp file: " + pqFile.getAbsolutePath());
+            Files.delete(Path.of(pqFile.getAbsolutePath()));
             session.transfer(flowfile, REL_SUCCESS);
         } catch (Exception e) {
             getLogger().error("Processing failed", e);
